--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -137,7 +137,8 @@
 			\item{Objective lens
 
 				\par Three objective lenses are fitted to the lower end of the body tube in the revolving nose piece. They are the low power, high power and oil immersion objective lenses. The desired objective lens is placed close to object on the stage and it produces a real magnified and inverted primary image. When the oil immersion objective is used, the space between the object and the lens is filled with cedar wood oil which has the same refractive index as that of glass and hence prevents refraction of light.\newline
-				\begin{tabular}{c | c | c | c}
+				\small{%
+					\begin{tabular}{|p{1in} | p{1in} |p{1in} |p{1in} |}
 					\hline
 					\textbf{Objective} & \textbf{Working Distance} & \textbf{Numerical Aperture} &\textbf{Magnification}\\
 					\hline
@@ -162,6 +163,7 @@
 
 
 				\end{tabular}
+				}
 
 				\par
 				Adjustments for low power objective
@@ -1088,7 +1090,7 @@
 																\item{What are the clinical applications of this method? }
 															\end{enumerate}
 															%----------------------------------------------------------------------------}}}
-															%-----------}}}
+														%-----------}}}
 %-----Clinical Physiology------{{{
 															\part*{Clinical Physiology}
 %---------------GeneralExamination---{{{
