--- a/customTOC.tex
+++ b/customTOC.tex
@@ -1,7 +1,7 @@
-\documentclass[a4paper,12pt]{book}
+\documentclass[a4paper,12pt,oneside,openany]{book}
  \usepackage{graphicx}
  \usepackage{float}
- \usepackage[a4paper, left=1in,right=1in,top=2cm,bottom=1.5cm]{geometry} \begin{document}
+ \usepackage[a4paper, left=1.5in,right=.7in,top=2cm,bottom=1.5cm]{geometry} \begin{document}
 
 \pagenumbering{gobble}
 \begin{table}[H]
