--- a/firstPageAndCertificate.tex
+++ b/firstPageAndCertificate.tex
@@ -1,7 +1,7 @@
 
 %-----------preamble-------{{{
-\documentclass[a4paper,12pt]{book}
-\usepackage[a4paper, left=1in,right=1in,top=2cm,bottom=1.5cm]{geometry}
+\documentclass[a4paper,12pt,openany,oneside]{book}
+\usepackage[a4paper, left=1.5in,right=.75in,top=2cm,bottom=1.5cm]{geometry}
 \usepackage{csvsimple}
 \usepackage{float}
 \usepackage{pdfrender}
@@ -68,7 +68,10 @@ Year of Admission& :& \rule{4in}{.5pt} \\
 	{\centering \LARGE{CERTIFICATE\\}}
 \end{center}
 	\par
-	Certified that this is the Bonafide Clinical Physiology Practical Record Book of Ms/Mr. \rule{3.5in}{.5pt}who has undergone First Year MBBS course, during the period from \rule{1in}{.5pt} to \rule{1in}{.5pt}.  His / Her work has been Satisfactory / Good.\\
+	{\large{
+	Certified that this is the Bonafide Physiology Practical Record Book of Ms/Mr. \rule{3.5in}{.5pt}who has undergone First Year MBBS course, during the period from \rule{1in}{.5pt} to \rule{1in}{.5pt}.  His / Her work has been Satisfactory / Good.\\
+	}
+	}
 
 
 \begin{table}[H]
