Final proof reading done by Dr. A. Gayatri, Asst Prof, Dept. of Physiology, KAPVGMC, corrections made accordingly

--- a/combinedRecord.tex
+++ b/combinedRecord.tex
@@ -1529,7 +1529,7 @@ Percussion  allows  you  to  hear  the  pitch  and  loudness  of  the  percussed
 \paragraph{Rules of percussion}
 \begin{itemize}
 \item{Place the middle finger of the left hand (Pleximeter finger) firmly against the chest,}
-\item{aligned in the intercostal space.}
+\item{Aligned in the intercostal space.}
 \item{Strike the centre of the middle phalanx of Pleximeter finger with the tip of your right middle finger (Percussing finger). Use a loose swinging movement of the wrist and not the forearm.}
 \item{The long axis of the pleximeter finger should be parallel to the border of the organ being percussed.}
 \item{Percussion is performed from a more resonant to less resonant area}
@@ -1574,7 +1574,9 @@ Percussion  allows  you  to  hear  the  pitch  and  loudness  of  the  percussed
 
 \paragraph{Causes for absence of breath sounds}
 \begin{itemize}
-	\item[]Pleural effusion, Pneumothorax.
+		\itemsep0em
+	\item{Pleural effusion}
+	\item{Pneumothorax}
 \end{itemize}
 
 \paragraph{Vocal Resonance:}
@@ -2046,7 +2048,7 @@ Precordium is the anterior aspect of the chest wall overlying the heart. Examina
 	\par
 	Apical impulse is defined as the lowermost and outermost definite cardiac Impulse. It is normally located in the left fifth intercostal space half an inch medial to mid clavicular line.
 	\par
-	First, place the palm on the precordium to feel the apical impulse and the n place the ulnar border of the palm horizontally in the intercoastal space where the pulsation is felt. Finally the apex beat is localised by the tip of the index finger C count the intercostal spaces with reference to the sterna angle (Angle of Lewis) – the most prominent point on the sternum. The second rib joins the manubrium sternum. The space below the second rib is the second intercostal space and accordingly other intercostals spaces are counted. 
+	First, place the palm on the precordium to feel the apical impulse and the n place the ulnar border of the palm horizontally in the intercoastal space where the pulsation is felt. Finally the apex beat is localised by the tip of the index finger. Count the intercostal spaces with reference to the sternal angle (Angle of Louis) – the most prominent point on the sternum. The second rib joins the manubrium sternum. The space below the second rib is the second intercostal space and accordingly other intercostals spaces are counted. 
 	\par
 	Note the position of the apex in the intercostals space with relation of midclavicular line.
 	\par
@@ -2189,8 +2191,8 @@ It gives a rough value of systolic blood pressure, It helps to avoid missing of 
 		\hline
 		Systolic BP by palpatory method ($mm$Hg) & Systolic BP by auscultatory method ($mm$Hg) & Diastolic BP by auscultatory method ($mm$ Hg) & Pulse pressure (SBP-DBP) ($mm$ Hg) & Mean arterial pressure (DBP+${\frac{1}{3}}$ Pulse Pressure) ($mm$ Hg) \\ \hline
 			                                         &                                             &                                               &                                                                              &                                                                                                               \\ \hline
-								                                          &                                             &                                               &                                                                              &                                                                                                               \\ \hline
-													                                           &                                             &                                               &                                                                              &                                                                                                               \\ \hline
+								                                          %&                                             &                                               &                                                                              &                                                                                                               \\ \hline
+													                                           %&                                             &                                               &                                                                              &                                                                                                               \\ \hline
 	\end{tabular}
 	}
 \end{table}
@@ -2257,8 +2259,8 @@ Systolic BP will show a rise due to increase in the heart rate and cardiac outpu
 
 										     BP at rest                                                           &                                          &                                              &                                               \\ \hline
 										     \begin{tabular}[c]{@{}l@{}}Immediately\\ after exercise\end{tabular} & Not to be done                           &                                              &                                               \\ \hline
-											     2 min after exercise                                                 & Not to be done                           &                                              &                                               \\ \hline
-											     5 min after exercise                                                 & Not to be done                           &                                              &                                               \\ \hline
+											     %2 min after exercise                                                 & Not to be done                           &                                              &                                               \\ \hline
+											     %5 min after exercise                                                 & Not to be done                           &                                              &                                               \\ \hline
 	\end{tabular}
 	}
 \end{table}
@@ -2287,7 +2289,7 @@ Systolic BP will show a rise due to increase in the heart rate and cardiac outpu
 					\includegraphics[height=18cm,width=12cm]{./clinicalPhysioPic/sensoryIntruments.jpg}
 					\label{SensoryIntruments}
 				\end{figure}
-				}												\par									Before starting the procedure explain the nature of the test to be performed. Ask the subject to close the eyes or turn the face to the other side whenever necessary.
+				}												\par									Before starting the procedure explain the nature of the test to be performed. Ask the subject to \textbf{close the eyes or turn the face to the other side whenever necessary.}
 															\par
 Apply uniform sensory stimulus and examine dermatome wise on both sides.
 \paragraph{Following sensations are tested}
@@ -2300,7 +2302,7 @@ Apply uniform sensory stimulus and examine dermatome wise on both sides.
 \item{Stereognosis:}
 \item{Romberg’s sign}
 \end{itemize}
-\subsection*{Tactile Sensation: (Tested with eyes closed)}
+\subsection*{Tactile Sensation:}
 \subsubsection*{Fine touch (Light touch):}
 \begin{itemize}
 \item{ Ask the subject to say ‘yes’ or raise his finger when he perceives the sensation of touch.}
@@ -2339,7 +2341,7 @@ Apply uniform sensory stimulus and examine dermatome wise on both sides.
 \item[]Paraesthesia 	- Perverted touch sensation (Touch may produce unpleasant 				sensation)
 \end{itemize}
 
-\subsection*{Sense Of Position: (to be done with eyes closed)}
+\subsection*{Sense Of Position:}
 \par
 The appreciation of passive movement
 \par
@@ -2352,7 +2354,7 @@ The appreciation of passive movement
 \item{Ask the subject if he perceives vibrations and instruct him to raise his hand when he ceases to feel the vibration.}
 \item{Immediately place tuning fork on the corresponding bony prominence of the examiner. If the examiner can still perceive it, the subject's perception of vibration is impaired.}
 \end{itemize}
-\subsection*{Pain Sensation (to be done with eyes open)}
+\subsection*{Pain Sensation:}
 \addfig{%
 	\centering
 	\begin{figure}[H]
@@ -2408,7 +2410,7 @@ The appreciation of passive movement
 \item{Place the bottom of the test tubes on the skin of the subject each ‘in turn or randomly’ and ask the subject to say what he feels}
 \item{Test and compare all the dermatomes.}
 	\end{itemize}
-	\subsection*{Stereognosis: (to be done with eyes closed)}
+	\subsection*{Stereognosis:}
 \begin{itemize}
 \item{Place a familiar object in subject’s hand}
 \item{The subject should identify the object by its shape,texture, size, etc and should tell what it is}
@@ -2690,7 +2692,7 @@ The subject is asked to extend the flexed forearm against resistance.
 }
 \item{ Supraspinatus: 
 \par
-Ask the subject to keep the arm by the side of the body and to lift his arm at right angles to his side against resistance. The first 300of abduction is carried out by supraspinatus. The remaining 600 is by the deltoid.
+Ask the subject to keep the arm by the side of the body and to lift his arm at right angles to his side against resistance. The first 30$^\circ$of abduction is carried out by supraspinatus. The remaining 60$^\circ$ is by the deltoid.
 }
 \item{ Deltoid: 
 \par
@@ -2867,7 +2869,7 @@ Ask the subject to look at a distant object. Then touch the limbus (sclerocornea
 Ask the subject to lie in supine position with abdomen uncovered.\\
 \textbf{Stimulus}: With the blunt end of the knee hammer, stroke lightly and briskly on each quadrant of abdomen above and below the umbilicus from outer aspect towards midline.\\
 \textbf{Response}: Contraction of abdominal muscles in that quadrant.
-\subsection*{Plantar Reflex: (L5, SI)}
+\subsection*{Plantar Reflex: (L5, S1)}
 Ask the subject to lie in supine position with the muscles of lower limbs completely relaxed.\\
 \textbf{Stimulus}: With the blunt end of the knee hammer, outer edge of the sole of foot is stroked gently along the lateral border starting from heel towards little toe and then along the bases of other toes medially.\\
 \textbf{Normal Response: }\\
@@ -2990,7 +2992,7 @@ Flex the elbow of the subject and rest the forearm across the subject's chest. T
 \subsection*{Supinator jerk/Brachio-radialis jerk: (C5, C6)}
 Flex the elbow of the subject and keep the forearm in a semiprone position. Tap gently the tendon overlying the radial styloid process with the knee hammer.\\
 \textbf{Response:} (contraction of brachio-radialis muscle) Supination of the forearm.
-\subsection*{Knee jerk: (L1,L2, L3)}
+\subsection*{Knee jerk: (L2, L3, L4)}
 Ask the Subject to lie in a supine position with the Quadriceps femoris muscle relaxed. Support the knee to be tested with the hand underneath the knee joint. Strike sharply the Quadriceps tendon (patellar tendon) with a knee hammer.\\
 \textbf{Response:}(contraction of quadriceps muscle) extension of leg at the knee. Reflex may also be elicited in a sitting posture. The subject is seated on a stool with one leg crossed over the other with the leg hanging loosely. Examiner's hand is placed over the quadriceps muscle and the patellar tendon is gently tapped with the knee hammer.
 \subsection*{Ankle jerk: (S1-S2)}
@@ -3115,7 +3117,7 @@ Normally he should be able to put a brake on the movement. In cerebellar lesions
 						In cerebellar lesion, pendular knee jerk response is observed.
 
 						\section*{Speech:}
-						Ask the subject to pronounce RAJAGOPALACHARI”/“RHINOCEROUS”
+						Ask the subject to pronounce "RAJAGOPALACHARI”/“RHINOCEROUS”.
 							In cerebellar lesion, there will be dysarthria. (scanning speech/ staccato speech)
 							\section*{Gait:}
 								Ask the subject to walk barefoot for at least 9 meters and then turn around and walk back to the starting point. Observe the gait.
@@ -3155,7 +3157,7 @@ Make sure that the subject does not have any upper airway congestion or obstruct
 Test each nostril separately with eyes closed after giving proper instructions to the subject, to indicate if he recognizes the particular substance or not. Tabulate the results.
 \subsection*{Discussion:}
 A normal subject can recognize the substance with each nostril.
-	Anosmia means complete absence of smell.Parosmia means perverted sensation of smell Hyposmia means reduction in the sense of smell. All these conditions develop due to damage to the olfactory pathways by trauma or disease. Olfactory hallucinations occur in temporal lobe epilepsy.
+	\textbf{Anosmia} means complete absence of smell. \textbf{Parosmia} means perverted sensation of smell. \textbf{Hyposmia} means reduction in the sense of smell. All these conditions develop due to damage to the olfactory pathways by trauma or disease. Olfactory hallucinations occur in temporal lobe epilepsy.
 
 		\section*{II Cranial Nerve – Optic Nerve (purely sensory)}
 		It serves the sense of vision. The functions to be tested are:
@@ -3167,13 +3169,15 @@ A normal subject can recognize the substance with each nostril.
 \item{Accommodation reflex.}
 		\end{enumerate}
 		\subsection*{Visual acuity:}
-		It is defined as the resolving power of the eyes i.e. the extent to which the eye can perceive the details and contours of an object clearly. It is explained in terms of mi nimum separable distance ie, the shortest distance by which two lines can be separated and still can be perceived as two lines. Visual acuity is the function of cones.
+		It is defined as the resolving power of the eyes i.e. the extent to which the eye can perceive the details and contours of an object clearly. It is explained in terms of minimum separable distance ie, the shortest distance by which two lines can be separated and still can be perceived as two lines. Visual acuity is the function of cones.
 		\begin{itemize}
 			\item[]Test for distant vision
 			\item[]Test for near vision.
 		\end{itemize}
 		\subsubsection*{Test for distant vision:(Snellen's chart)}
-		A series of letters of varying size are constructed in such a way that the top letter is visible to normal eyes at 60 metres and the subsequent lines at 36 , 24, 18, 12, 9 , 6, 5 meters respectively. Visual acuity, V=d/D , where d is the distance at which the letters are read (6m) and D is the distance from which the letters can be read normally.
+		A series of letters of varying size are constructed in such a way that the top letter is visible to normal eyes at 60 metres and the subsequent lines at 36 , 24, 18, 12, 9 , 6, 5 meters respectively. 
+		\par
+		Visual acuity, V=d/D , where d is the distance at which the letters are read (6m) and D is the distance from which the letters can be read normally.
 		\par
 		The subject is seated at a distance of 6 m from a well illuminated Snellen's chart and each eye should be tested separately. The line upto which the subject is able to read is noted.If the subject wears glasses , visual acuity should be tested with and without them.
 		\paragraph{Observation:}
@@ -3194,19 +3198,24 @@ A normal subject can recognize the substance with each nostril.
 			To test the subject's right eye, the subject’s left eye and the examiner's right eye are closed. The subject is asked to fix his gaze at the examiner’s left eye. The subject is instructed not to turn his head or shift his gaze. The examiner holds out his left arm to its full extent and then moves his finger from periphery to the centre, kept midway between him and the subject in all the four quadrants (temporal, nasal, superior and inferior) . Ask the subject to say 'yes' when he sees the finger tip. If the subject's field of vision is normal, he will be able to see the moving finger at the point where the examiner sees it. Repeat the test in the other eye.
 			\subsubsection*{Discussion:}
 			The field of vision is maximum in the temporal quadrant and minimum in the superior quadrant.
-			Visual Field defects- Scotoma and Hemianopia
+			Visual Field defects:-
+			\begin{itemize}
+					\itemsep0em
+					\item{Scotoma}
+					\item{Hemianopia}
+			\end{itemize}
 			Perimeter is used to accurately map the peripheral field of vision
 			\subsection*{Colour vision}
 			\addfig{
 				\begin{figure}
 					\centering
-					\includegraphics[width=10cm,height=15cm]{./clinicalPhysioPic/cranialNerves1_6/extraocularMuscles.jpg}
+					\includegraphics[width=12cm,height=15cm]{./clinicalPhysioPic/cranialNerves1_6/extraocularMuscles.jpg}
 					\caption*{Extraocular Muscles}
 				\end{figure}
 				}
 			\paragraph{Ishihara's chart:} The Ishihara's chart consists of series of lithographic colour plates which are printed with figures or designs in coloured circles on a background of differently coloured circles of the same size. The subject is asked to read numbers or trace the lines in each plate of the book.A person with defective colour vision will read a different number from the colour plate.
 			\paragraph{Holmgren’s wool test:} The subject is asked to perform a series of colour matching from a collection of wools of different colours. A colour blind subject will not be able to match the colours.
-			As Optic nerve is a component of papillary reflexes, light reflex and accommodation reflex are tested.
+			As Optic nerve is a component of pupillary reflexes, light reflex and accommodation reflex are tested.
 
 			\subsection*{Pupillary light reflex:}
 			\paragraph{Direct light reflex:}Examine each eye separately.Ask the subject to fix the gaze at a distant object. Shine the light from the side with a pen torch into the eye. Observe the pupilary reaction.
@@ -3231,7 +3240,7 @@ A normal subject can recognize the substance with each nostril.
 			\textbf{Afferent}– 2nd cranial nerve.
 			\textbf{Efferent} – 3rd cranial nerve.
 \subsection*{Discussion:}
-	In lesions of 3rd cranial nerve, accommodation reflex is absent on the affected side. Argyll-Robertson Pupil:In neurosyphilis the pretectal region of the midbrain is damaged. Here pupillary light reflex is absent and the accommodation reflex is preserved.
+	In lesions of 3rd cranial nerve, accommodation reflex is absent on the affected side. \textbf{Argyll-Robertson Pupil:}In neurosyphilis the pretectal region of the midbrain is damaged. Here pupillary light reflex is absent and the accommodation reflex is preserved.
 
 \section*{III, IV \& VI Cranial Nerves –Occulomotor, Trochlear \& Abducent Nerves (Purely motor)}
 They supply the extra ocular muscles which move the eyeball.  
@@ -3364,13 +3373,16 @@ Special sensory fibres carrying taste from anterior two third of the tongue.
 		\textbf{Bell’s phenomenon:}Ask the subject to close his eyes. On closing the eyes the eyeballs roll upwards, which is not seen in a normal person since the eyelids close properly. In Bell’s palsy (LMN type of facial nerve palsy), this phenomenon is seen on the affected side as he cannot close the eyelids.}
 \end{itemize}
 \subsection*{Sensory component:}
-Test the taste sensation in anterior two third of the tongue\\
-Use solutions of sugar, common salt, citric acid and quinine to test sensations of sweet, salt, sour and bitter respectively\\
-Ask the subject to protrude the tongue out and apply the solution on the surface of one half of the tongue with a swab.\\
-The subject is asked to indicate perception of the taste by finger signs without taking the tongue back into the mouth.\\
-After each test, the mouth must be rinsed.\\
-The test is repeated with each solution and then on the other half of tongue.\\
-The bitter quinine should be applied last, as its effect lasts longer.
+\begin{itemize}
+		\itemsep0em
+\item{Test the taste sensation in anterior two third of the tongue}
+\item{Use solutions of sugar, common salt, citric acid and quinine to test sensations of sweet, salt, sour and bitter respectively}
+\item{Ask the subject to protrude the tongue out and apply the solution on the surface of one half of the tongue with a swab.}
+\item{The subject is asked to indicate perception of the taste by finger signs without taking the tongue back into the mouth.}
+\item{After each test, the mouth must be rinsed.}
+\item{The test is repeated with each solution and then on the other half of tongue.}
+\item{The bitter quinine should be applied last, as its effect lasts longer.}
+\end{itemize}
 \subsection*{Reflexes:}
 		\begin{itemize}
 \item{Corneal reflex (Refer 1-6 cranial nerve)}
@@ -3483,8 +3495,10 @@ Look for Nystagmus (Involuntary, jerky, to and fro rhythmic movements of the eye
 Ask the subject to open his mouth wide and tickle the back of the pharynx with the help of a cotton swab stick and observe the contraction of posterior pharyngeal wall, ( 9thand 10thcranial nerve)
 
 \subsection*{Tests For Sensory Component}
-Test the taste sensation (as explained in the 7th cranial nerve) on the posterior $\frac{1}{3}^{rd}$of the tongue.
-Baroreceptor function-Record the blood pressure of the subject in the supine position and immediately (within 15 seconds) on standing. A fall in systolic BP of more than 20mmHg is suggestive of orthostatic hypotension.
+\begin{itemize}
+\item{Test the taste sensation (as explained in the 7th cranial nerve) on the posterior $\frac{1}{3}^{rd}$of the tongue.}
+\item{Baroreceptor function-Record the blood pressure of the subject in the supine position and immediately (within 15 seconds) on standing. A fall in systolic BP of more than 20mmHg is suggestive of orthostatic hypotension.}
+\end{itemize}
 
 \section*{X Cranial Nerve – Vagus Nerve (Mixed nerve)}
 \paragraph{It has motor and sensory components.}
